# KiDBMan

./: .gitignore  configuration.kicad_dbl  configuration2.kicad_dbl  kidbman.py  pyproject.toml  readme.md  testing.py  update_kicad_libdb.py
databases/: access_example.accdb
examples/: __example_ttkbootstrap_table.py
src/: kidbman.py  kidbmangui.py  testing.py  update_kicad_libdb.py
src/kidbman/: __init__.py  database_reader.py  gui.py  libdb_reader.py
src/simplified_db_proformer/: read_schema.py
